--- a/pom.xml
+++ b/pom.xml
@@ -66,10 +66,15 @@
             <version>2.2</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.30</version>
+        </dependency>
     </dependencies>
 
     <build>
-        <finalName>spring-web-demo</finalName>
+        <finalName>myblog</finalName>
         <pluginManagement>
             <plugins>
                 <plugin>
